# svepa

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/svepa/: __init__.py  svepa.py
src/svepa/svepa_information/: __init__.py  helpers.py  svepa_event.py  svepa_export_file.py  svepa_info.py
src/svepa/svepa_information/DATA_FILES/: svepa_info.pickle  svepa_info.yaml
svepa/: OB_tests_winserv817.py  __init__.py  event_id.py  exceptions.py  svepa.py
svepa/OBACs_simple_test_code/: Get_event_info.sql  Get_other_event_info.sql  Get_station_number_for_active_CTD-event.sql  Get_station_number_for_active_CTD-event_test_to_get_other_events_as_well.sql  SQL_example_simple.sql  Svepa_get_event_meta_using_series.py  Svepa_get_station_number.py  Svepa_pyodbc_connection.py
svepa/svepa_information/: __init__.py  helpers.py  svepa_event.py  svepa_export_file.py  svepa_info.pickle  svepa_info.py  svepa_info.yaml
svepa/tests/: test_svepa_info.py
