[project]
name = "svepa"
version = "2.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Magnus Wenzer", email = "nodc@smhi.se"},
]
dependencies = [
    "pypyodbc>=1.3.6",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["."]
