[project]
name = "svepa"
version = "2.0.0"
description = "Python package to extract information from the event system SVEPA on R/V Svea"
authors = [
    {name = "nodc-sweden", email = "nodc@smhi.se"},
]
dependencies = [
    "pypyodbc>=1.3.6",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["."]
